[package]
name = "elysees"
version = "0.0.4"
authors = ["Jad Elkhaleq Ghalayini", "The Servo Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/rain-lang/elysees"
description = "A fork of triomphe::Arc, now with more pointer tricks."
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]
edition = "2018"

[features]
std = []
default = ["serde", "stable_deref_trait", "std", "erasable", "slice-dst"]

[dependencies]
serde = { version = "^1.0", default-features = false, optional = true }
stable_deref_trait = { version = "^1.1", default-features = false, optional = true }
erasable = { version = "^1.2", default-features = false, optional = true }
slice-dst = { version = "^1.5", default-features = false, optional = true }