[package]
name = "elysees"
version = "0.2.4"
authors = ["Jad Elkhaleq Ghalayini", "The Servo Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/rain-lang/elysees"
description = "A fork of triomphe::Arc, now with more pointer tricks."
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]
edition = "2018"

[features]
std = []
default = [
    "stable_deref_trait", 
    "std", 
    "erasable", 
    "slice-dst", 
    "ptr-union",
]

[dependencies]
serde = { version = "^1.0", default-features = false, optional = true }
stable_deref_trait = { version = "^1.1", default-features = false, optional = true }
erasable = { version = "^1.2.1", optional = true }
slice-dst = { version = "1.5.1", optional = true }
ptr-union = { version = "^2.1", optional = true }
arbitrary = { version = "^0.4", optional = true }

[dev-dependencies]
lazy_static = "^1.4"